--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,12 @@
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
         {# Fonts#}
+        <script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
+        <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
+
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Russo+One" rel="stylesheet">
 </head>
-<body>
+<body src="{% static 'images/pic.png' %}">
   <nav class="nav navbar techfont bg-success custom-navbar">
       <ul class="nav navbar-nav text-white">
         <li>
