add background image

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>About me</h1>
-<p>Thanks for visiting my blog_app! Check all this cool stuff about me!</p>
-
+<p>This 
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis esse ullam, in ex, necessitatibus obcaecati iure error quis perferendis officia libero maiores sint natus nemo, molestias itaque ea dolor inventore.
+</p>
 {% endblock %}
